# IPBD-Praktikum1

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirement.txt
app/: main.py
app/core/: deps.py  hash.py  security.py
app/database/: session.py
app/database/model/: schema.py
app/dto/validator/: blog.py  user.py
app/routes/: blog.py  user.py
migration/: env.py
migration/versions/: 10db685d94d0_init.py  81355b46616d_init_model.py
